--- a/Homeworks/08_CSS/Task02/css/style.css
+++ b/Homeworks/08_CSS/Task02/css/style.css
@@ -15,6 +15,7 @@ thead {
 	margin:0;
 	padding:0;
 }
+
 th {
 	padding: 5px;
 	margin:3px;
@@ -44,6 +45,8 @@ td {
 }
 
 table {
+	
+	border-collapse: collapse;
 	background-color:white;
 	width: 460px;
 	height: 146px;
