--- a/Project/Prototype/css/style.css
+++ b/Project/Prototype/css/style.css
@@ -1,466 +1,402 @@
 ﻿body {
-	.background:url(../images/gradient.png);
-	.background-repeat:repeat-x;
-	.background-color:#111111;
-	font-family:Arial;
-	font-weight:normal;
-	font-size:12px;
+	.background: url(../images/gradient.png);
+	.background-repeat: repeat-x;
+	.background-color: #111111;
+	font-family: Arial;
+	font-weight: normal;
+	font-size: 12px;
 }
 header {
-	height:80px;
+	height: 80px;
 	padding: 0 0 0 8px;
-	vertical-align:middle;
-	opacity:0.8;
-	filter:alpha(opacity=80);
-	width:100%;
+	vertical-align: middle;
+	opacity: 0.8;
+	filter: alpha(opacity=80);
+	width: 100%;
 }
 h2 {
-margin: 0 0 10px 10px;	
-font-size:14px;
+	margin: 0 0 10px 10px;
+	font-size: 14px;
 }
 .meetings tbody tr {
-
-height:60px;
+	height: 60px;
 }
-
-
-;.sub-menu, .menu{
-;	border:1px solid red;
-;}
-
-
 .spacer {
-	height:50px;
-	width:100%;	
+	height: 50px;
+	width: 100%;
 }
 .menu a {
-	text-decoration:none;
-	color:black;
-	padding:10px 0 10px;
+	text-decoration: none;
+	color: black;
+	padding: 10px 0 10px;
 }
-
-
 .sub-menu a {
-	text-decoration:none;
-	color:black;
-	padding:10px 0 10px;
-
+	text-decoration: none;
+	color: black;
+	padding: 10px 0 10px;
 }
-
 .sub-menu .link-button {
-	background:url(../images/sub-button.png) top right no-repeat #59a4b3;	
-		height:30px;
-	line-height:30px;
-}
-.sub-menu .link-button:hover{
-	background:url(../images/sub-button.png) bottom right no-repeat #59a4b3;
-}
-
-
-.menu .link-button {
-	background:url(../images/button.png) top right no-repeat #59a4b3;
-	height:40px;
-	line-height:40px;
-}
-
-.menu .link-button:hover{
-	background:url(../images/button.png) bottom right no-repeat #59a4b3;
-}
-.menu .active{
-	background:url(../images/button.png) bottom right no-repeat #59a4b3;
-}
-
-.link-button:hover{
-	background:url(../images/sub-button.png) bottom right no-repeat #59a4b3;
-}
-
-.link-button{
-	cursor:pointer;
-	float:right;
-	width:auto;
-	background:url(../images/sub-button.png) top right no-repeat #59a4b3;	
-		height:30px;
-	line-height:30px;
-	padding:0 40px 0 15px;
-	color:#18191a;
-	font-size:14px;
-	font-weight:bold;
-	text-transform:uppercase;
-	text-shadow:0 1px 1px #fff;
-	border:none;
-
-	-moz-border-radius:20px;-webkit-border-radius:20px;border-radius:20px;
-	-moz-box-shadow:0 1px 1px black);
-	-webkit-box-shadow:0 1px 1px black;
-	box-shadow:0 1px 1px black;
-}
-
-
-.config-button {
-	width:	28px;
+	background: url(../images/sub-button.png) top right no-repeat #59a4b3;
 	height: 30px;
-	background-image:url(../images/config-gear.png);
-	float:right;
-	cursor:pointer;	
+	line-height: 30px;
+}
+.sub-menu .link-button:hover {
+	background: url(../images/sub-button.png) bottom right no-repeat #59a4b3;
+}
+.menu .link-button {
+	background: url(../images/button.png) top right no-repeat #59a4b3;
+	height: 40px;
+	line-height: 40px;
+}
+.menu .link-button:hover {
+	background: url(../images/button.png) bottom right no-repeat #59a4b3;
+}
+.menu .active {
+	background: url(../images/button.png) bottom right no-repeat #59a4b3;
+}
+.link-button:hover {
+	background: url(../images/sub-button.png) bottom right no-repeat #59a4b3;
+}
+.link-button {
+	cursor: pointer;
+	float: right;
+	width: auto;
+	background: url(../images/sub-button.png) top right no-repeat #59a4b3;
+	height: 30px;
+	line-height: 30px;
+	padding: 0 40px 0 15px;
+	color: #18191a;
+	font-size: 14px;
+	font-weight: bold;
+	text-transform: uppercase;
+	text-shadow: 0 1px 1px #fff;
+	border: none;
+	-moz-border-radius: 20px;
+	-webkit-border-radius: 20px;
+	border-radius: 20px;
+	-moz-box-shadow: 0 1px 1px black);
+	-webkit-box-shadow: 0 1px 1px black;
+	box-shadow: 0 1px 1px black;
+}
+.config-button {
+	width: 28px;
+	height: 30px;
+	background-image: url(../images/config-gear.png);
+	float: right;
+	cursor: pointer;
 	margin: 10px 30px 0 5px;
-
 }
 .close-button {
-	background-image:url(../images/close.png);
+	background-image: url(../images/close.png);
 	margin-top: -10px;
-
-	float:right;
-	height:28px;
+	float: right;
+	height: 28px;
 	width: 28px;
-	cursor:pointer;	
+	cursor: pointer;
 }
-
-
 header span {
-	font-weight:bold;
-
-	float:right;
-	color:black;
-	font-size:17px;
-	padding:15px 5px 0 0;
+	font-weight: bold;
+	float: right;
+	color: black;
+	font-size: 17px;
+	padding: 15px 5px 0 0;
 }
-	
-
-
-
-
 .header-guest {
-
-	margin:0 0 50px 0;
-	padding:0;
-	width:100%;
-	background-color:#075F72;
-	height:120px;
-    background: url("../images/header-hr.jpg") repeat-x scroll center top transparent;
+	margin: 0 0 50px 0;
+	padding: 0;
+	width: 100%;
+	background-color: #075F72;
+	height: 120px;
+	background: url("../images/header-hr.jpg") repeat-x scroll center top transparent;
 }
-
 .header-guest span {
-	text-align:center;
-     float:left;
-	 margin: 10px 0 0 10%;
-	font-family:Verdana, Geneva, sans-serif;
-	font-size:44px;
-	color:white;
+	text-align: center;
+	float: left;
+	margin: 10px 0 0 10%;
+	font-family: Verdana, Geneva, sans-serif;
+	font-size: 44px;
+	color: white;
 }
-
 .footer-guest {
-	margin:150px auto 50px auto;
-	padding:0;
-	width:100%;
-	background-color:#000;
-
+	margin: 120px auto 50px auto;
+	padding: 0;
+	width: 100%;
+	background-color: #000;
 	min-height: 120px;
-    background: url("../images/header-hr.jpg") repeat-x scroll center top transparent;
-		-moz-border-bottom-left-radius:0px;
-	-webkit-bottom-left-border-radius:0px;
-	border-bottom-left-radius:0px;
-	
-	-moz-border-bottom-right-radius:0px;
-	-webkit-bottom-right-border-radius:0px;
-	border-bottom-right-radius:0px;
-
+	background: url("../images/header-hr.jpg") repeat-x scroll center top transparent;
+	-moz-border-bottom-left-radius: 0px;
+	-webkit-bottom-left-border-radius: 0px;
+	border-bottom-left-radius: 0px;
+	-moz-border-bottom-right-radius: 0px;
+	-webkit-bottom-right-border-radius: 0px;
+	border-bottom-right-radius: 0px;
 }
 #config-box {
-	display:none;
-	width:100px;
-    text-align:right;
-	padding:15px;
-	font-size:17px;
+	display: none;
+	width: 100px;
+	text-align: right;
+	padding: 15px;
+	font-size: 17px;
 	margin: 44px 0 0 820px;
-	background-color:#efe;
-	border:1px solid #bbb;
-	
-	position:absolute;
-	z-index:999;
-	
-	-moz-border-bottom-left-radius:14px;
-	-webkit-bottom-left-border-radius:14px;
-	border-bottom-left-radius:14px;
-	
-	-moz-border-top-left-radius:14px;
-	-webkit-top-left-border-radius:14px;
-	border-top-left-radius:14px;	
+	background-color: #efe;
+	border: 1px solid #bbb;
+	position: absolute;
+	z-index: 999;
+	-moz-border-bottom-left-radius: 14px;
+	-webkit-bottom-left-border-radius: 14px;
+	border-bottom-left-radius: 14px;
+	-moz-border-top-left-radius: 14px;
+	-webkit-top-left-border-radius: 14px;
+	border-top-left-radius: 14px;
 }
-
-
 ul {
-	margin:0;
-	padding:0;
-	float:left;
-	padding:3px 3px 3px 10px;
-	list-style:none;
+	margin: 0;
+	padding: 0;
+	float: left;
+	padding: 3px 3px 3px 10px;
+	list-style: none;
 }
-
 li {
-	margin-right:20px;
+	margin-right: 20px;
 }
-
-
-
 .upcomming {
-	background-image:url(../images/stripes.png);
+	background-image: url(../images/stripes.png);
 	border: 1px solid #000;
-	background-color:#56B906;	
-	height:25px;
+	background-color: #56B906;
+	height: 25px;
 	font-size: 18px;
 	color: #000;
-	font-weight:normal;
-	opacity:0.7;
+	font-weight: normal;
+	opacity: 0.7;
 	padding: 15px 0 5px;
-	filter:alpha(opacity=70);
-	width:948px;
+	filter: alpha(opacity=70);
+	width: 948px;
 }
-
 .birthday {
-background-color:yellow;	
+	background-color: yellow;
 }
 .meeting {
-background-color:#FFD28E;	
+	background-color: #FFD28E;
 }
-
 .upcomming span {
-margin: 0 0 0 40px;
+	margin: 0 0 0 40px;
 }
-
-
-
 #container {
-
-	background-color:#efe;
-	width:950px;
-	padding:15px 0 0px;
-	margin:20px auto 0;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
-	border-radius:5px;
-	border:2px solid #ccc;
-	-moz-border-radius:14px;
-	-webkit-border-radius:14px;
-	border-radius:14px;
-	-moz-box-shadow:0 3px 5px rgba(100,100,100,.5);
-	-webkit-box-shadow:0 3px 5px rgba(100,100,100,.5);
-	box-shadow:0 3px 5px rgba(100,100,100,.5);
-	
+	background-color: #efe;
+	width: 950px;
+	padding: 15px 0 0px;
+	margin: 20px auto 0;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	border: 2px solid #ccc;
+	-moz-border-radius: 14px;
+	-webkit-border-radius: 14px;
+	border-radius: 14px;
+	-moz-box-shadow: 0 3px 5px rgba(100,100,100,.5);
+	-webkit-box-shadow: 0 3px 5px rgba(100,100,100,.5);
+	box-shadow: 0 3px 5px rgba(100,100,100,.5);
 }
-
-	
 h1 {
-	
 	margin: 20px 10px 10px 10px;
-	font-size:17px;
-	color:#4C96FF;
-	font-weight:bold;
-	text-transform:uppercase;
+	font-size: 17px;
+	color: #4C96FF;
+	font-weight: bold;
+	text-transform: uppercase;
 }
-
 .description {
-	margin: 10px 10px  10px 0px ;	
-	font-color:white;
+	margin: 10px 10px 10px 0px;
+	font-color: white;
 }
-
-input[type=submit]{
-margin-top:10px;	
+input[type=submit] {
+	margin-top: 10px;
 }
-
-input[type=text], input[type=password], input[type=email] { 
-	background-color:#faffbd
+input[type=text], input[type=password], input[type=email] {
+	background-color: #faffbd;
 }
-
-
 dt, dd {
-	display:inline;
-	
+	display: inline;
 }
 dt {
 	width: 150px;
-
-	float:left;
+	float: left;
 	padding: 7px 0 0 0;
-		margin:5px 0 5px 0;
+	margin: 5px 0 5px 0;
 }
-
 dd {
-	padding:0;
-	margin:0;
+	padding: 0;
+	margin: 0;
 }
-
-#register-form,#add-category{
-	width:400px;
+#register-form, #add-category {
+	width: 400px;
 }
-
 .required {
-	font-size:17px;
-	font-weight:bold;
+	font-size: 17px;
+	font-weight: bold;
 	color: red;
-	float:right;
-	padding-right:7px;
+	float: right;
+	padding-right: 7px;
 }
-
-#register-form .form-text ,#add-category .form-text , #add-meeting .form-text 
-{
+#register-form .form-text, #add-category .form-text, #add-meeting .form-text {
 	width: 220px;
-	margin:5px 0 5px 0;
+	margin: 5px 0 5px 0;
 }
-
-
 .form-text {
-		width:100%;
+	width: 100%;
 }
-
 #login-form {
-	width:500px;	
+	width: 500px;
 }
 tfoot td {
-
-	vertical-align:middle;
+	vertical-align: middle;
 }
 .page-number {
-
-
-height:100%;
-margin-top:7px;
-float:left;
-display:inline;
-
-
+	height: 100%;
+	margin-top: 7px;
+	float: left;
+	display: inline;
 }
 .pagination {
-	padding:0;
-	margin-top:5px;
-	float:left;
+	padding: 0;
+	margin-top: 5px;
+	float: left;
 }
 .page-number input {
-	width:25px;	
+	width: 25px;
 }
-
-
-#login-form,#register-form, #add-category, #add-meeting  {
-	
-	background-color:#fff;
-	background-color:#efe;
-	
-	margin:0 auto 20px;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
-	border-radius:5px;
-	padding:30px 30px 80px 30px;
-	border:2px solid #ccc;
-	-moz-border-radius:14px;
-	-webkit-border-radius:14px;
-	border-radius:14px;
-	-moz-box-shadow:0 3px 5px rgba(100,100,100,.5);
-	-webkit-box-shadow:0 3px 5px rgba(100,100,100,.5);
-	box-shadow:0 3px 5px rgba(100,100,100,.5);
+#login-form, #register-form, #add-category, #add-meeting {
+	background-color: #fff;
+	background-color: #efe;
+	margin: 0 auto 20px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	padding: 30px 30px 80px 30px;
+	border: 2px solid #ccc;
+	-moz-border-radius: 14px;
+	-webkit-border-radius: 14px;
+	border-radius: 14px;
+	-moz-box-shadow: 0 3px 5px rgba(100,100,100,.5);
+	-webkit-box-shadow: 0 3px 5px rgba(100,100,100,.5);
+	box-shadow: 0 3px 5px rgba(100,100,100,.5);
 }
-
 #add-meeting {
-	width:400px;
+	width: 400px;
 }
-#add-category{
-	display:none;
-	width:400px;
-	-moz-border-top-left-radius:0px;
-	-webkit-border-top-left-radius:0px;
-	border-top-left-radius:0px;
-		-moz-border-top-right-radius:0px;
-	-webkit-border-top-right-radius:0px;
-	border-top-right-radius:0px;
+#add-category {
+	display: none;
+	width: 400px;
+	-moz-border-top-left-radius: 0px;
+	-webkit-border-top-left-radius: 0px;
+	border-top-left-radius: 0px;
+	-moz-border-top-right-radius: 0px;
+	-webkit-border-top-right-radius: 0px;
+	border-top-right-radius: 0px;
 }
-
 .form-text {
-
-	-webkit-box-sizing:border-box;
-	-moz-box-sizing:border-box;
-	-ms-box-sizing:border-box;
-	box-sizing:border-box;
-	margin:0 0 0 0;
-	padding:5px 8px;
-	color:#18191a;
-	font-size:14px;
-	font-weight:bold;
-	border:1px solid #ccc;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
-	border-radius:5px;
-	}
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+	margin: 0 0 0 0;
+	padding: 5px 8px;
+	color: #18191a;
+	font-size: 14px;
+	font-weight: bold;
+	border: 1px solid #ccc;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+}
 .form-text:hover {
-	border: 2px solid orange;	
+	border: 2px solid orange;
 	padding: 4px 7px;
 }
-
 thead {
-	background-color:#56B906;
-	font-weight:normal;
-	color:white;
-	font-size:15px;	
-	margin:0;
-	padding:0;
+	background: url(../images/stripes.png);
+	background-repeat: repeat-x;
+	background-color: #00BE37;
+	font-weight: normal;
+	color: white;
+	font-size: 15px;
+	margin: 0;
+	padding: 0;
 }
-
 th {
-	padding: 5px;
-	margin:3px;
-	font-size:12px;
-	text-align:left;
+	padding: 5px 15px 5px 15px;
+	margin: 3px;
+	font-size: 12px;
+	text-align: left;
 	font-weight: bold;
 	border: 1px solid #3B9206;
-	border-left: 1px solid #2A8800;	
-	border-bottom: 1px solid #2A8800;	
+	border-left: 1px solid #2A8800;
+	border-bottom: 1px solid #2A8800;
 }
 img {
 	padding-right: 4px;
 }
 tr {
-	line-height: 25px;	
-	
+	line-height: 25px;
+	margin: 0;
 }
 td {
-	padding: 5px 5px 5px 15px;
-	margin:3px;
+	padding: 5px 15px 5px 15px;
+	margin: 3px;
 	border-left: 1px solid #C8C7AE;
 	border-right: 1px solid #C8C7AE;
-	border-top:none;
+	border-top: none;
 }
 .odd {
-   background-color: #efe;
-   border-top: 1px solid #ccc;
-   border-bottom: 1px solid #ccc;
+	background-color: #efe;
+	border-top: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
 }
-
 table {
 	border-collapse: collapse;
-	background-color:white;
+	background-color: white;
 	width: 100%;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
-	border-radius:5px;
-	margin: 0 0 10px 0;
+	margin: 0;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	margin: 0 0 0 0;
 }
 .attendands a {
-	display: block;	
-	height:17px;
+	display: block;
+	height: 17px;
 }
+
 footer {
-	
+	padding:10px 0 0 0;
 	width: 948px;
-	border:1px solid #aaa;
-	padding:8px 0 0 0;
-	text-transform:uppercase;
-	font-size:10px;
-	background-color:#ccc;
-	text-align:center;
-	height:25px;
-	-moz-border-bottom-left-radius:14px;
-	-webkit-bottom-left-border-radius:14px;
-	border-bottom-left-radius:14px;
-	-moz-border-bottom-right-radius:14px;
-	-webkit-bottom-right-border-radius:14px;
-	border-bottom-right-radius:14px;
+	border: 1px solid #aaa;
+	padding: 0px 0 0 0;
+	text-transform: uppercase;
+	font-size: 10px;
+	font-weight:bold;
+	background: url(../images/stripes.png);
+	background-repeat: repeat-x;
+	text-align: center;
+	height: 30px;
+	-moz-border-bottom-left-radius: 14px;
+	-webkit-bottom-left-border-radius: 14px;
+	border-bottom-left-radius: 14px;
+	-moz-border-bottom-right-radius: 14px;
+	-webkit-bottom-right-border-radius: 14px;
+	border-bottom-right-radius: 14px;
+}
+img {
+	border:0;
 }
 
 
+.refresh{
+	margin-left: 15px;
+}
+
+#copyright, #copyright a  {
+	color:#0B803E;
+	font-family:Verdana, Geneva, sans-serif;
+	margin-top:7px;
+	font-weight:bold;
+}
