--- a/Project/WebCalendar/WebCalendar/Views/Shared/_Layout.cshtml
+++ b/Project/WebCalendar/WebCalendar/Views/Shared/_Layout.cshtml
@@ -11,13 +11,14 @@
     <script src="@Url.Content("~/Scripts/jquery-ui.min.js")"></script>
     <script src="@Url.Content("~/Scripts/web-calendar.js")"></script>
     <meta name="viewport" content="width=device-width">
+    <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+  </head>
 
-</head>
-
-<body>
-@RenderBody() 
+  <body>
+    @RenderBody() 
 
 
-</body>
+  </body>
 
 </html>
