--- a/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Views/Home/Home.cshtml
+++ b/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Views/Home/Home.cshtml
@@ -5,14 +5,15 @@
     ViewBag.Title = "My Courses";
 }
 <script>
-    $(document).ready(function () {
-        $('#courseID').val($('#Courses option:selected').val());
+  $(document).ready(function () {
+      $('#courseID').val($('#Courses option:selected').val());
 
-        $('#Topics').change(function () {
-        $('#topicID').val($(this).attr('value'));
-        });
+      $('#Topics').change(function () {
+          $('#topicID').val($(this).attr('value'));
+          this.form.submit();
+      });
 
-    });
+  });
 </script>
 <p>@ViewBag.Hello</p>
 <div class=message-error>@ViewBag.Message</div>
@@ -22,28 +23,38 @@
 </h3>
 @using (Html.BeginForm("Home", "Home", FormMethod.Get, new { enctype = "multipart/form-data" }))
 {
-    @Html.DropDownListFor(x => x.Courses, new SelectList(Model.Courses, "ID", "Name"),
-        "---Select a Course---", new { onchange = "this.form.submit();" })
-    <h3>
-      Select a topic for this course:
-    </h3>
-    @Html.DropDownList("Topics", new SelectList(ViewBag.Topics, "ID", "Name"), "--Select a Topic---");
-
     @Html.Hidden("academyID", Model.AcademyID)
-
+    @Html.DropDownListFor(x => x.Courses, new SelectList(Model.Courses, "ID", "Name"),
+        new { onchange = "this.form.submit();" })
 }
-
-
-@using (Html.BeginForm("Upload", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+<h3>
+  Select a topic for this course:
+</h3>
+@using (Html.BeginForm("Index", "Submission", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
+    @Html.DropDownList("Topics", new SelectList(ViewBag.Topics, "ID", "Name"), "--Select a Topic---");
     @Html.Hidden("academyID", Model.AcademyID)
     @Html.Hidden("courseID", "")
     @Html.Hidden("topicID", "")
-    <label for="file">Filename:</label>
-    <input type="file" name="file" id="file" />
-
-    <input type="submit" />
+    
+    @Html.ValidationSummary(true)
 }
+
+
+
+
+
+@*@using (Html.BeginForm("Upload", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+@Html.Hidden("academyID", Model.AcademyID)
+
+<label for="file">Filename:</label>
+<input type="file" name="file" id="file" />
+
+<input type="submit" />
+}
+*@
+
 
 
 
