--- a/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Views/Shared/_LogOnPartial.cshtml
+++ b/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Views/Shared/_LogOnPartial.cshtml
@@ -5,7 +5,6 @@
     </p>
 } else {
     <ul>
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", data_dialog_title = "Registration" })</li>
-        <li>@Html.ActionLink("Log on", "LogOn", "Account", routeValues: null, htmlAttributes: new { id = "logonLink", data_dialog_title = "Identification" })</li>
+        <li>@Html.ActionLink("Admin Login", "LogOn", "Account", routeValues: null, htmlAttributes: new { id = "logonLink", data_dialog_title = "Identification" })</li>
     </ul>
 }
