--- a/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Views/Home/Index.cshtml
+++ b/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Views/Home/Index.cshtml
@@ -2,8 +2,9 @@
     ViewBag.Title = "Home Page";
 }
 <div class=message-error>@ViewBag.Message</div>
+<h3>Hello Student</h3>
 
-<p>Please enter your Academy ID (ex. @ViewBag.RandomID) :</p>
+<p>Please enter your Academy ID: (ex. <strong>@ViewBag.RandomID</strong>)</p>
 @using (Html.BeginForm("Home", "Home", FormMethod.Get))
 {
 @Html.TextBox("AcademyID")
