--- a/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Views/Shared/_Layout.cshtml
+++ b/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Views/Shared/_Layout.cshtml
@@ -1,51 +1,65 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>Homework Submission :: @ViewBag.Title </title>
-        <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
-        <link href="@Url.Content("~/Content/themes/base/jquery.ui.all.css")" rel="stylesheet" type="text/css" />
-        <script src="@Url.Content("~/Scripts/jquery-1.6.2.min.js")" type="text/javascript"></script>
-        <script src="@Url.Content("~/Scripts/jquery-ui-1.8.11.js")" type="text/javascript"></script>
-        <script src="@Url.Content("~/Scripts/modernizr-2.0.6-development-only.js")" type="text/javascript"></script>
-        <script src="@Url.Content("~/Scripts/AjaxLogin.js")" type="text/javascript"></script>
-        <meta name="viewport" content="width=device-width">
-    </head>
-    <body>
-        <header >
-            <div class="content-wrapper" class="float-right" >
-                <div class="float-left">
-                    <p class="site-title">Telerik Homework Submission System</p>
-                </div>
-                <div >
-                    <section id="login">
-                        @Html.Partial("_LogOnPartial")
-                    </section>
-                    <nav >
-                        <ul id="menu" >
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("About", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-        </header>
-        <div id="body">
-            @RenderSection("featured", false)
-            <section class="content-wrapper main-content clear-fix">
-                @RenderBody()
-            </section>
+  <head>
+    <meta charset="utf-8" />
+    <title>
+      Homework Submission :: @ViewBag.Title
+    </title>
+    <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/themes/base/jquery.ui.all.css")" rel="stylesheet" type="text/css" />
+    <script src="@Url.Content("~/Scripts/jquery-1.6.2.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery-ui-1.8.11.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/modernizr-2.0.6-development-only.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/AjaxLogin.js")" type="text/javascript"></script>
+    <meta name="viewport" content="width=device-width">
+  </head>
+  <body>
+    <header >
+      <div class="content-wrapper" class="float-right" >
+        <div class="float-left">
+          <p class="site-title">
+            Telerik Homework Submission System
+          </p>
         </div>
-        <footer>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - Telerik Homework Submission System</p>
-                </div>
-                <div class="float-right">
-             
-                </div>
-            </div>
-        </footer>
-    </body>
+        <div >
+          <section id="login">
+            @Html.Partial("_LogOnPartial")
+          </section>
+          <nav >
+            <ul id="menu" >
+
+              @if (Request.IsAuthenticated)
+              {
+                    <li>@Html.ActionLink("Students", "Index", "Student")</li>
+                    <li>@Html.ActionLink("Courses", "Index", "Course")</li>
+                    <li>@Html.ActionLink("Topics", "Index", "Topic")</li>
+              }
+              else
+              {
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+              }
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <div id="body">
+      @RenderSection("featured", false)
+      <section class="content-wrapper main-content clear-fix">
+        @RenderBody()
+      </section>
+    </div>
+    <footer>
+      <div class="content-wrapper">
+        <div class="float-left">
+          <p>
+            &copy; @DateTime.Now.Year - Telerik Homework Submission System
+          </p>
+        </div>
+        <div class="float-right">
+        
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
