--- a/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Areas/Admin/Views/Course/Index.cshtml
+++ b/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Areas/Admin/Views/Course/Index.cshtml
@@ -1,17 +1,19 @@
 ﻿@model IEnumerable<HomeworkSubmission.DAL.Cours>
 @{
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Course";
 }
 @{
 
     ViewBag.ItemsPerPage = ViewBag.ItemsPerPage ?? 20;
-    ViewBag.ItemsPerPageOptions = ViewBag.ItemsPerPageOptions ?? new List<int>{ 10, 20, 50, 100 };
+    ViewBag.ItemsPerPageOptions = ViewBag.ItemsPerPageOptions ?? new List<int> { 10, 20, 50, 100 };
 
     int currentPage = ViewBag.Start / ViewBag.ItemsPerPage + 1;
     int pageCount = (ViewBag.Count - 1) / ViewBag.ItemsPerPage + 1;
     ViewBag.Start = (currentPage - 1) * ViewBag.ItemsPerPage;
 
-    RouteValueDictionary currentRouteValues = new RouteValueDictionary(new {
+    RouteValueDictionary currentRouteValues = new RouteValueDictionary(new
+    {
         start = ViewBag.Start,
         itemsPerPage = ViewBag.ItemsPerPage,
         orderBy = ViewBag.OrderBy,
@@ -24,30 +26,38 @@
             int currentStart = (int)currentRouteValues["start"];
             int itemsPerPage = (int)currentRouteValues["itemsPerPage"];
         }
-        @if (currentPage != 1) {
+        @if (currentPage != 1)
+        {
             currentRouteValues["start"] = 0;
             <a href="@Url.RouteUrl(currentRouteValues)" class="begin">|&lt;</a>
             currentRouteValues["start"] = currentStart - itemsPerPage;
             <a href="@Url.RouteUrl(currentRouteValues)" class="prev">&lt;&lt;</a>
-        } else {
+        }
+        else
+        {
             <span class="begin">|&lt;</span> <span class="prev">&lt;&lt;</span>
         }
         <span>Page</span> <input type="text" value="@currentPage" class="pageNum hidden" />
         <span class="pageNum">@currentPage</span> <span>of</span> <span class="pageCount">@pageCount</span>
-        @if (currentPage != pageCount) {
+        @if (currentPage != pageCount)
+        {
             currentRouteValues["start"] = currentStart + itemsPerPage;
             <a href="@Url.RouteUrl(currentRouteValues)" class="next">&gt;&gt;</a>
             currentRouteValues["start"] = (pageCount - 1) * itemsPerPage;
             <a href="@Url.RouteUrl(currentRouteValues)" class="end">&gt;|</a>
-        } else {
+        }
+        else
+        {
             <span class="next">&gt;&gt;</span> <span class="end">&gt;|</span>
         }
         @{currentRouteValues["start"] = currentStart;}
         <a href="@Url.RouteUrl(currentRouteValues)" class="refresh">[Refresh Grid]</a>
         <span class="itemsPerPage hidden">Items Per Page:
             <select>
-                @foreach (var option in ViewBag.ItemsPerPageOptions) {
-                    <option value="@option" @if (option == ViewBag.ItemsPerPage) {
+                @foreach (var option in ViewBag.ItemsPerPageOptions)
+                {
+                    <option value="@option" @if (option == ViewBag.ItemsPerPage)
+                                            {
                             @: selected="selected"
                     }>@option</option>
                 }
