--- a/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Views/Shared/_LogOnPartial.cshtml
+++ b/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Views/Shared/_LogOnPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@if (Request.IsAuthenticated) {
     <p>
         Hello, @Html.ActionLink(User.Identity.Name, "ChangePassword", "Account", null, new { @class = "username" })!
-        @Html.ActionLink("Log Off", "LogOff", "Account")
+        @Html.ActionLink("Log Off", "LogOff", "Account", new { area = "" }, null)
     </p>
 } else {
     <ul>
