--- a/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Views/Submission/Success.cshtml
+++ b/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Views/Submission/Success.cshtml
@@ -3,4 +3,4 @@
 }
 
 @ViewBag.Message
-<h2>Homework Successfully submitted for @Session["AcademyID"]</h2>
+<h2 class="message-success">Homework Successfully submitted for @Session["AcademyID"]</h2>
