--- a/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Areas/Admin/Views/Courses/Create.cshtml
+++ b/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Areas/Admin/Views/Courses/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model HomeworkSubmission.DAL.Cours
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Create";
 }
 
-<h2>Edit</h2>
+<h2>Create</h2>
 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
@@ -13,8 +13,6 @@
     @Html.ValidationSummary(true)
     <fieldset>
         <legend>Cours</legend>
-
-        @Html.HiddenFor(model => model.ID)
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Name)
@@ -33,7 +31,7 @@
         </div>
 
         <p>
-            <input type="submit" value="Save" />
+            <input type="submit" value="Create" />
         </p>
     </fieldset>
 }
