--- a/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Content/Site.css
+++ b/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Content/Site.css
@@ -95,6 +95,10 @@ h5, h6 {
     padding-bottom: 35px;
 }
 
+td 
+{
+}
+
     .main-content {
         background: url("../images/accent.png") no-repeat;
         padding-left: 10px;
