--- a/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Areas/Admin/Views/Courses/Index.cshtml
+++ b/InterviewProject/HomeworkSubmission/HomeworkSubmission.MVC/Areas/Admin/Views/Courses/Index.cshtml
@@ -33,8 +33,7 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Details", "Details", new { id=item.ID })
         </td>
         <td>
         @if (Directory.Exists(Server.MapPath("~/Uploads/") + item.ID + "_COURSE"))
